--- a/WindsorWebsite.html
+++ b/WindsorWebsite.html
@@ -10,7 +10,7 @@
         <link rel="icon" href = "Windsor_Icon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="main.css">
-        <script src = "D:/Users/Matteus DiPietro/Documents/GitHub/OOAD_Project/searchBar.js" type = "text/javascript"></script>
+        <script src = "searchBar.js" type = "text/javascript"></script>
     </head>
 
     <body>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" id = "dataPreview">
                     <div class = "row">
                         <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 1.5vh;">A Data Set</p> 
