--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: main page
 ---
-
+<a class="imageNav" href="">
+    <img src = "{{ site.url }}/assets/images/Windsor_Logo.png" style="height:50px">    
+</a>
 <div class = "container" style="margin-left: 5vw; margin-right: 5vw">
     <div class=info>
         <h1>Open Data</h1>
