Created Dataset pages
Created a php script that will create an html file for a dataset if one is not available. Can look at website at dipie111.myweb.cs.uwindsor.ca/WindsorWebsite/WindsorWebsite.html.

--- a/WindsorWebsite.html
+++ b/WindsorWebsite.html
@@ -15,7 +15,6 @@
         <script src = "js/searchBar.js" type = "text/javascript"></script>
         <script src = "js/FilterSearch.js" type = "text/javascript"></script>
         <script src = "js/jsController.js" type = "text/javascript"></script>
-
     </head>
 
     <body>
@@ -139,42 +138,42 @@
                 </div>
                 <div class="col" id = "dataPreview">
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction(['test', 100])" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col"  onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
                     <div class = "row">
-                        <div class="col" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
+                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
                             <p style="font-size: 12pt;">A Data Set</p> 
                         </div>
                     </div>
