Added Multiple features
Made it so filtered datasets that appear twice will not be shown twice, changed so that the page will initially show the first 20 datasets in the database, worked on search functionality.

--- a/WindsorWebsite.html
+++ b/WindsorWebsite.html
@@ -17,7 +17,7 @@
         <script src = "js/jsController.js" type = "text/javascript"></script>
     </head>
 
-    <body>
+    <body onload = "doAction('load')">
         <nav class="navbar navbar-light" style="background-color: rgb(26,47,57)">
             <a class="imageNav" href="">
                 <img src = "images/Windsor_Logo.png" style="height:50px">    
@@ -137,46 +137,6 @@
                     </div>
                 </div>
                 <div class="col" id = "dataPreview">
-                    <div class = "row">
-                        <div class="col" onclick = "doAction(['test', 100])" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col"  onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
-                    <div class = "row">
-                        <div class="col" onclick = "doAction('test')" style="border: 1px solid black; height: 12vh; border-radius: 4px; margin: .5vh;">
-                            <p style="font-size: 12pt;">A Data Set</p> 
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
