--- a/datasetpages/1.html
+++ b/datasetpages/1.html
@@ -1,55 +1,23 @@
-<?php
-require_once ("Dataset.php");
-require_once ("ConnectVars.php");
-
-class DataPageCreator{
-
-    private $fileLocation;
-
-    function __construct($location){
-        $this->fileLocation = $location;
-    }
-
-    function checkFileExists($filename){
-        $file = fopen(sprintf("%s%s",$this->fileLocation, $filename), "r");
-        if(!$file){
-            return false;
-        }
-        else{
-            return true;
-        }
-    }
-
-    function createPage($dataset){
-        
-        try{
-            $filename = sprintf("%d.hhtml", $dataset->getDataId());
-            if($this->checkFileExists($filename) == false){
-                $file = fopen(sprintf("%s%s",$this->fileLocation, $filename), "w");
-                fwrite($file,'<!DOCTYPE html>
+<!DOCTYPE html>
                             <html lang="en">
                             <head>
                             <meta charset="UTF-8">
                             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                            <link rel="icon" href = "/images/Windsor_Icon.png">
+                            <link rel="icon" href = "/WindsorWebsite/images/Windsor_Icon.png">
                             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-                            <link rel="stylesheet" href="main.css">
                             <title>Dataset Template</title>
                             </head>
                             <body>
                             <nav class="navbar navbar-light" style="background-color: rgb(26,47,57)">
-                            <a class="imageNav" href="/WindsorWebsite.html">
-                            <img src = "/images/Windsor_Logo.png" style="height:50px">    
+                            <a class="imageNav" href="../WindsorWebsite.html">
+                            <img src = "/WindsorWebsite/images/Windsor_Logo.png" style="height:50px">    
                             </a>
                             </nav>
                             </body>
                             <div class = container>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 18pt; font-weight: bold;">'
-                );
-                fwrite($file,$dataset->getDataName());
-                fwrite($file,'</p> 
+                            <p style="font-size: 18pt; font-weight: bold;">311 Contact Centre Metrics</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -59,10 +27,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getCust());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">311</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -72,10 +37,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->Dcc());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">The data will be updated annually and posted early in the following year.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -85,10 +47,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getDataDesc());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">This dataset outlines a number of key performance indicators in the Windsor 311 Contact Centre calculated on a yearly basis. This information is used by 311 for planning and business purposes and provides customers an understanding of the volume of interactions and overall trends.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -98,10 +57,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getDac);
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">This set represents data extracted from the Contact Centre phone system as well as through the customer relationship management software.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -111,10 +67,17 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getAttr());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">Calls Answered: A numerical value representing the total number of phone calls answered annually.
+Average Answer Delay: A numeric calculation representing the average amount of time waiting in queue prior to live answer.
+Service Level Target: A numeric value which measures how quickly customers are being served, expressed as a percentage of incoming calls being answered within a specific time frame. The Windsor 311 Service Level Target is 75/45 indicating that the goal is to answer 75% of calls within 45 seconds.
+Average Length of Call: A numeric value presented in minutes indicating the average amount of time taken to address a customer telephone interaction.
+First Call Resolution Rate: A numeric calculation indicating the percentage of calls that addressed the customers need on the first call thus eliminating the need to transfer that call to another department.
+311 Knowledge Base Inquiries: A numeric value representing the number of inquiries categorized where questions were answered or information was provided the customer.
+311 Service Requests: A numeric value representing the total number of customer initiated or proactive service requests entered in the customer relationship management software.
+311 Online: A numeric value representing the total number of customer initiated service requests entered through the online channel.
+311 Texts: A numeric value representing the total number of customer initiated inquiries received and responded to via the text channel.
+311 Email: A numeric value representing the total number of customer initiated inquiries received and responded to via the email channel.
+311 Mobile App: A numeric value representing the total number of customer initiated requests received via the Windsor 311 mobile app.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -129,21 +92,9 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <a style="font-size: 12pt;" href = "/WindsorWebsite.html">Back to List</a> 
+                            <a style="font-size: 12pt;" href = "../WindsorWebsite.html">Back to List</a> 
                             </div>
                             </div>
                             </div>
 
-                            </html>'
-                );
-                return true;
-            }
-            return true;
-        }
-        catch(Exception $e){
-            return false;
-        }
-    }
-}
-
-?>
+                            </html>
