--- a/datasetpages/5.html
+++ b/datasetpages/5.html
@@ -1,55 +1,23 @@
-<?php
-require_once ("Dataset.php");
-require_once ("ConnectVars.php");
-
-class DataPageCreator{
-
-    private $fileLocation;
-
-    function __construct($location){
-        $this->fileLocation = $location;
-    }
-
-    function checkFileExists($filename){
-        $file = fopen(sprintf("%s%s",$this->fileLocation, $filename), "r");
-        if(!$file){
-            return false;
-        }
-        else{
-            return true;
-        }
-    }
-
-    function createPage($dataset){
-        
-        try{
-            $filename = sprintf("%d.hhtml", $dataset->getDataId());
-            if($this->checkFileExists($filename) == false){
-                $file = fopen(sprintf("%s%s",$this->fileLocation, $filename), "w");
-                fwrite($file,'<!DOCTYPE html>
+<!DOCTYPE html>
                             <html lang="en">
                             <head>
                             <meta charset="UTF-8">
                             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                            <link rel="icon" href = "/images/Windsor_Icon.png">
+                            <link rel="icon" href = "/WindsorWebsite/images/Windsor_Icon.png">
                             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-                            <link rel="stylesheet" href="main.css">
                             <title>Dataset Template</title>
                             </head>
                             <body>
                             <nav class="navbar navbar-light" style="background-color: rgb(26,47,57)">
-                            <a class="imageNav" href="/WindsorWebsite.html">
-                            <img src = "/images/Windsor_Logo.png" style="height:50px">    
+                            <a class="imageNav" href="/WindsorWebsite/WindsorWebsite.html">
+                            <img src = "/WindsorWebsite/images/Windsor_Logo.png" style="height:50px">    
                             </a>
                             </nav>
                             </body>
                             <div class = container>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 18pt; font-weight: bold;">'
-                );
-                fwrite($file,$dataset->getDataName());
-                fwrite($file,'</p> 
+                            <p style="font-size: 18pt; font-weight: bold;">All Service Requests</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -59,10 +27,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getCust());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">311</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -72,10 +37,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->Dcc());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">The file ending with "_YTD.csv" will be updated frequently, often multiple times per week. The file ending with a range will usually be posted early in the following year.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -85,10 +47,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getDataDesc());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">The dataset contains information on customer initiated service requests entered into the City of Windsor 311 system from various channels (phone, email, online self-serve, text). 311 manages the service request data for City of Windsor departments and divisions represented in this dataset. As such, 311 consulted the participating divisions and subject matter experts for this release. This data set is extracted electronically from the 311 customer request management system.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -98,10 +57,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getDac);
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">This data represents only a portion of overall City of Windsor services and the number and location of service requests will not be representative of the full range of services provided by the City of Windsor. This data represents requests for service entered into the 311 system initiated from the customer's perspective based on description provided by the customer at the time of contact with 311. However, during the request fulfillment process, it could be determined that the customer's request may not be valid or may need to be adjusted. For example a request for a tree trim is made, but upon investigation by the Forestry department it is determined that the tree is on private property and therefore the responsibility of the property owner to maintain. Review of data should take into consideration the urban attributes and context of the issue being reported, such as vegetation density, population density, age of infrastructure asset, zoning and applicable by-laws, and it should also be noted that multiple reports may be received for the same issue, which can influence results.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -111,10 +67,13 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getAttr());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">Service Request Description: A text field of the request for service description created within the 311 system. The 311 service creates requests on behalf of the customer and forwards it to the appropriate department or division for action.
+Department: A text field indicating the department or division responsible to follow up on the request for service.
+Method Received: A text field indicating the channel by which the inquiry was received: phone, email, online or text.
+Created Date: Numeric field indicating the date and time the service request was entered into the system.
+Block: Numeric field representing the block location of the reported service request.
+Street: Text field providing the street name location of the reported service request.
+Ward: Alpha numeric field indicating the political ward associated with the reported service request.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -129,21 +88,9 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <a style="font-size: 12pt;" href = "/WindsorWebsite.html">Back to List</a> 
+                            <a style="font-size: 12pt;" href = "../WindsorWebsite.html">Back to List</a> 
                             </div>
                             </div>
                             </div>
 
-                            </html>'
-                );
-                return true;
-            }
-            return true;
-        }
-        catch(Exception $e){
-            return false;
-        }
-    }
-}
-
-?>
+                            </html>
