--- a/datasetpages/8.html
+++ b/datasetpages/8.html
@@ -1,55 +1,23 @@
-<?php
-require_once ("Dataset.php");
-require_once ("ConnectVars.php");
-
-class DataPageCreator{
-
-    private $fileLocation;
-
-    function __construct($location){
-        $this->fileLocation = $location;
-    }
-
-    function checkFileExists($filename){
-        $file = fopen(sprintf("%s%s",$this->fileLocation, $filename), "r");
-        if(!$file){
-            return false;
-        }
-        else{
-            return true;
-        }
-    }
-
-    function createPage($dataset){
-        
-        try{
-            $filename = sprintf("%d.hhtml", $dataset->getDataId());
-            if($this->checkFileExists($filename) == false){
-                $file = fopen(sprintf("%s%s",$this->fileLocation, $filename), "w");
-                fwrite($file,'<!DOCTYPE html>
+<!DOCTYPE html>
                             <html lang="en">
                             <head>
                             <meta charset="UTF-8">
                             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                            <link rel="icon" href = "/images/Windsor_Icon.png">
+                            <link rel="icon" href = "/WindsorWebsite/images/Windsor_Icon.png">
                             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-                            <link rel="stylesheet" href="main.css">
                             <title>Dataset Template</title>
                             </head>
                             <body>
                             <nav class="navbar navbar-light" style="background-color: rgb(26,47,57)">
-                            <a class="imageNav" href="/WindsorWebsite.html">
-                            <img src = "/images/Windsor_Logo.png" style="height:50px">    
+                            <a class="imageNav" href="/WindsorWebsite/WindsorWebsite.html">
+                            <img src = "/WindsorWebsite/images/Windsor_Logo.png" style="height:50px">    
                             </a>
                             </nav>
                             </body>
                             <div class = container>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 18pt; font-weight: bold;">'
-                );
-                fwrite($file,$dataset->getDataName());
-                fwrite($file,'</p> 
+                            <p style="font-size: 18pt; font-weight: bold;">Bike Lanes, Signed Routes & Multi-use Trails</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -59,10 +27,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getCust());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">Transportation Planning and Parks & Facilities, posted by the Geomatics Division</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -72,10 +37,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->Dcc());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">The data was posted on Sept 1, 2020 and will be updated as required.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -85,10 +47,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getDataDesc());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">These files are created from polylines and contain Type- bike lanes, signed routes and multi-use trails. Also the name of the Trails, if named and the length, if provided.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -98,10 +57,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getDac);
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">This linework is maintained by Transportation Planning and Parks & Facilities and updated using a variety of resources, including information from the Geomatics Division.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -111,10 +67,7 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <p style="font-size: 12pt;">'
-                );
-                fwrite($file,$dataset->getAttr());
-                fwrite($file,'</p> 
+                            <p style="font-size: 12pt;">The attributes include the Type- bike lanes, signed routes or multi-use trails. The name of the Trails if named and the length if provided.</p> 
                             </div>
                             </div>
                             <div class = "row">
@@ -129,21 +82,9 @@ class DataPageCreator{
                             </div>
                             <div class = "row">
                             <div class="col" >
-                            <a style="font-size: 12pt;" href = "/WindsorWebsite.html">Back to List</a> 
+                            <a style="font-size: 12pt;" href = "../WindsorWebsite.html">Back to List</a> 
                             </div>
                             </div>
                             </div>
 
-                            </html>'
-                );
-                return true;
-            }
-            return true;
-        }
-        catch(Exception $e){
-            return false;
-        }
-    }
-}
-
-?>
+                            </html>
